[package]
name = "lm_deezer_bf_dec"
version = "0.0.1-beta.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lm_deezer_bf_dec"
crate-type = ["cdylib"]

[dependencies]
blowfish = "0.9.1"
cbc = "0.1.2"
hex = "0.4.3"
md-5 = "0.10.6"
pyo3 = "0.19.0"
reqwest = { version = "0.11.22", features = ["blocking"] }